fixed light/dark mode

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -53,9 +53,23 @@ header {
     background-color: #52796f;
 }
 
-.drkbtn img {
+#moon {
     width: 1rem;
     height: 1rem;
+}
+
+#sun {
+    width: 1.2rem;
+    height: 1.2rem;
+    display: none;
+}
+
+.dark-mode #moon {
+    display: none;
+}
+
+.dark-mode #sun {
+    display: block;
 }
 
 .drkbtn:hover {
@@ -274,32 +288,21 @@ h3 {
     justify-content: space-evenly;
  }
 
- .fixed {
-    width: 40%; 
- }
-
- .link-container p {
-    border: 1px solid black;
-    background-color: #5c715e;
+.link-container button {
     border-radius: 1rem;
-    box-shadow: 2px 2px 2px;
-    margin: 0;
     padding: 10px;
-    height: 3rem;
-    text-align: center;
- }
+    background-color: #f2f9f1;
+    box-shadow: 2px 2px 2px;
+}
 
- .link-container p:hover {
-    background-color: #b6cdbd;
+.link-container button:hover {
+    cursor: pointer;
+    background-color: #2d6a4f;
+}
 
- }
-
- .link-container p:active {
-    padding: 9px;
-    font-size: 14px;
+.link-container button:active {
     box-shadow: none;
-    
- } 
+}
 
 
  #built-with {
